tests/invalid/invalid_use_of_prot.ri
prot fn protected_fn() {}
